# ai-contact-centre

./: .env.sample  .gitignore  README.md  Taskfile.yml  azure.yaml  main.py  pyproject.toml  utils.py
.github/: copilot-instructions.md
api/: Dockerfile  pyproject.toml
api/app/: .env.sample  azure_voice_live.py  chat.py  config.py  dependencies.py  main.py  phone_cli.py  phone_manager.py  sk_utils.py
api/app/agents/: azure_voice_live.py  realtime_events.py  utils.py
api/app/agents/mcp/: orders.yaml
api/app/agents/models/: Deliveries.py
api/app/agents/plugins/: __init__.py  call.py  delivery.py
api/app/agents/prompts/: DeliveryAgent.yaml
api/app/agents/settings/: 4o_realtime.yaml  chat.yaml  voice_live.yaml
api/app/agents/templates/: DeliveryAgent.yaml
api/app/plugins/: __init__.py  call.py  delivery.py
api/app/routers/: calls.py
api/app/static/: chat.html  index.html
api/app/templates/: DeliveryAgent.yaml
api/evaluation/: README.md  conversation_test_runner.py  env_example  metrics.py  utils.py  voice_call_client.py
api/evaluation/metrics/: __init__.py  conversation_evaluator.py  sample.py
api/evaluation/testcases/: eval_dataset.json  eval_dataset_extra.json  eval_dataset_full.json
api/static/: README.md  debug.html
eval/: README.md  main.py  pyproject.toml  utils.py  voice_call_client.py
eval/config/: eval_config.py
eval/configs/: default.yaml
eval/metrics/: conversation_evaluator.py  function_call_evaluator.py
infra/: acs.bicep  ai-project.bicep  main.bicep  main.parameters.json  resources.bicep
infra/modules/: acs.bicep  (+2 more)
(+5 files in other folders)
