[project]
name = "az-semantic-kernel-voice-live"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.23.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "semantic-kernel[realtime]>=1.32.2",
    "sounddevice>=0.5.2",
]
